--- a/front/frontend/src/components/App.css
+++ b/front/frontend/src/components/App.css
@@ -1,10 +1,21 @@
 .App {
   text-align: center;
+  
   background-color: #282c34;
   min-height: 100vh;
   color: rgb(211, 24, 24);
   padding:20px;
  
+}
+.button {
+  background-color: #1626d2; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
 }
 
 
